Built .jar successfully , Changed PLEASEWORK.java to App.java